configserializer: add missing settings to output serialization

BUG: 504854


(cherry picked from commit 22ad4bf3f97c9867d82ee0efc8c267b31793ca51)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>